Small modification to notebook

--- a/jupyter/work/WeatherData.ipynb
+++ b/jupyter/work/WeatherData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "6b5cf83e-33b2-4aba-81df-c660572ebf83",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "3359fb6b-e9f5-4274-b20a-a2d5e5c2526e",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "24e1adfc-cb62-4fee-bb15-670304dfe683",
    "metadata": {},
    "outputs": [],
@@ -39,27 +39,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "a4f324f9-7582-4d79-987b-ba53f6b81dc2",
    "metadata": {},
    "outputs": [],
    "source": [
     "spark = SparkSession\\\n",
     "          .builder\\\n",
-    "          .appName(\"ReadFromS3\")\\\n",
+    "          .appName(\"WeatherData\")\\\n",
     "          .master('local[*]')\\\n",
     "          .config(\"spark.hadoop.fs.s3a.impl\", \"org.apache.hadoop.fs.s3a.S3AFileSystem\")\\\n",
-    "          .config(\"spark.hadoop.fs.AbstractFileSystem.s3a.impl\", \"org.apache.hadoop.fs.s3a.S3A\")\\\n",
     "          .config(\"spark.hadoop.fs.s3a.access.key\", access_key)\\\n",
     "          .config(\"spark.hadoop.fs.s3a.secret.key\", secret_key)\\\n",
-    "          .config(\"spark.hadoop.fs.s3a.multiobjectdelete.enable\", \"false\") \\\n",
-    "          .config(\"spark.hadoop.fs.s3a.fast.upload\",\"true\") \\\n",
     "          .getOrCreate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "1ff0b75a-9266-4fac-81f4-fda363a77474",
    "metadata": {},
    "outputs": [],
@@ -78,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "02304797-b85c-4bfa-a252-7632b89c5847",
    "metadata": {},
    "outputs": [],
@@ -88,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "b2fbf74b-95ce-4e19-a016-8d5d3a7512dc",
    "metadata": {},
    "outputs": [],
@@ -102,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "7bd3aec6-79c9-4512-8c01-e8d2e6a60ecc",
    "metadata": {},
    "outputs": [],
@@ -112,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "ab1fb604-e81c-4487-a3d2-d1b2b7ad6058",
    "metadata": {},
    "outputs": [],
