Attempts to read and write to S3

--- a/jupyter/work/WeatherData.ipynb
+++ b/jupyter/work/WeatherData.ipynb
@@ -3,46 +3,40 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6b5cf83e-33b2-4aba-81df-c660572ebf83",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import os\n",
     "import boto3\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.functions import col, avg, to_timestamp, year\n",
-    "from pyspark.sql.types import StructType, StructField, StringType, IntegerType, FloatType"
-   ]
+    "from pyspark.sql.types import StructType, StructField, StringType, FloatType"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3359fb6b-e9f5-4274-b20a-a2d5e5c2526e",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "bucket = \"spark-eks-data-lake-\""
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "24e1adfc-cb62-4fee-bb15-670304dfe683",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "session = boto3.Session()\n",
     "credentials = session.get_credentials().get_frozen_credentials()\n",
     "access_key = credentials.access_key\n",
     "secret_key = credentials.secret_key"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a4f324f9-7582-4d79-987b-ba53f6b81dc2",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "spark = SparkSession\\\n",
     "          .builder\\\n",
@@ -52,14 +46,13 @@
     "          .config(\"spark.hadoop.fs.s3a.access.key\", access_key)\\\n",
     "          .config(\"spark.hadoop.fs.s3a.secret.key\", secret_key)\\\n",
     "          .getOrCreate()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1ff0b75a-9266-4fac-81f4-fda363a77474",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "schema = StructType([\n",
     "    StructField(\"station_id\", StringType(), False),\n",
@@ -71,59 +64,56 @@
     "    StructField(\"s_flag\", StringType(), True),\n",
     "    StructField(\"obs_time\", StringType(), True)\n",
     "])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "02304797-b85c-4bfa-a252-7632b89c5847",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "df = spark.read.csv(\"s3a://{}/weather/\".format(bucket), header=False, schema=schema).cache()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b2fbf74b-95ce-4e19-a016-8d5d3a7512dc",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "df_tavg = df.filter(col(\"element\") == \"TAVG\")\\\n",
     "  .withColumn(\"year\", year(to_timestamp(\"date\", 'yyyyMMdd')))\\\n",
     "  .groupBy(\"station_id\", \"year\")\\\n",
     "  .agg(avg(\"value\").alias(\"tavg\"))\\\n",
     "  .cache()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7bd3aec6-79c9-4512-8c01-e8d2e6a60ecc",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "df_tavg.write.json(\"s3a://{}/weather-tavg/\".format(bucket), mode=\"overwrite\")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ab1fb604-e81c-4487-a3d2-d1b2b7ad6058",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "spark.stop()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d09f1df-0dbd-4bcd-b133-c1d1dbff751c",
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
